# discord-theme-editor

./: Cargo.toml  build.rs
src/: css_gradients.rs  discord_rebuilder.rs  main.rs
ui/: colour-picker.slint  css-property.slint  helpers.slint  main-window.slint  theme.slint
