[package]
name = "discord-theme-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.2.0"
angular-units = { version = "0.2.4", default-features = false }
prisma = { version = "0.1.1", default-features = false }
rfd = { version = "0.12.0" }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
i-slint-core = { version = "1.2.0", features = ["serde"] }
asar = "0.2.0"

[target.'cfg(linux)'.dependencies]
which = "4.4.2"

[build-dependencies]
slint-build = "1.2.0"

[profile.release]
lto = true
strip = true
